--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,67 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Inter', sans-serif;
+    font-family: 'Merriweather', serif;
 }
-html, body {
+
+html,
+body {
     width: 100%;
     height: 100%;
 }
+
+/* shared style start */
+.middle-section {
+    margin: 50px 120px 100px;
+}
+
+.text-title {
+    color: #070211;
+    font-size: 48px;
+    font-weight: 700;
+    font-family: 'Inter', sans-serif;
+}
+
+.text-title2 {
+    color: #070211;
+    font-size: 48px;
+    font-weight: 900;
+    font-family: 'Merriweather', serif;
+}
+
+.text-paragraph {
+    color: rgba(7, 2, 17, 0.60);
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+}
+
+
+/* shared style end */
+
+/* header style */
+header {
+    height: 600px;
+    background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%) ,url('../resources/Banner\ Image.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    border-radius: 16px;
+    font-family: 'Merriweather', serif;
+    color: #fff;
+    text-align: center;
+    padding: 130px;
+}
+
+.new-year {
+    font-size: 32px;
+    padding-bottom: 15px;
+}
+
+.new-year-title {
+    font-size: 72px;
+    font-weight: 900;
+
+}
+
+/* main section style */
