--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ header {
     max-height: 600px;
     background-image: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../resources/Banner\ Image.png');
     background-repeat: no-repeat;
-    background-size: cover , cover;
+    background-size: cover, cover;
     border-radius: 16px;
     font-family: 'Merriweather', serif;
     color: #fff;
@@ -100,9 +100,9 @@ header {
 /* midnight party section */
 
 .party-container {
-    background-image: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%) ,url(../resources/Vectorrr.png);
+    background-image: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url(../resources/Vectorrr.png);
     background-repeat: no-repeat;
-    background-size: contain , cover;
+    background-size: contain, cover;
     display: flex;
     color: #fff;
 }
@@ -112,13 +112,6 @@ header {
     align-items: center;
 
 }
-.party-colum2 {
-    align-items: center;
-    /* width: 319.83px;
-height: 400px; */
-
-}
-
 
 .party-title {
     max-width: 600px;
@@ -135,23 +128,49 @@ height: 400px; */
     margin: 25px 0;
 }
 
-.party-colum > .btn {
- background-color: transparent;
- color: #fff;
-text-align: center;
-font-size: 20px;
-font-weight: 700;
-border: none;
-cursor: pointer;
-margin-left: 10px;
+.party-colum>.btn {
+    background-color: transparent;
+    color: #fff;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    border: none;
+    cursor: pointer;
+    margin-left: 10px;
 }
 
 .party-colum2 img {
     width: 250px;
     height: 450px;
-    padding-top: 100px;
-    fill-opacity: radial-gradient(50% 50% at 50% 50%, #690B02 27%, #8F4941 39%, #B18079 51%, #CDADA8 62%, #E3D1CD 73%, #F2EAE7 84%, #FCFAF6 93%, #FFFFFC 100%);
-    background-blend-mode:multiply;
-    /* mix-blend-mode: multiply; */
-   
+    padding: 60px 0 40px;
 }
+
+/* time and place section */
+.time-container {
+    background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+    padding: 100px 300px;
+    margin: 100px 0;
+    
+}
+
+.place > h5{
+    color: #070211;
+    text-align: center;
+    font-family: 'Inter', sans-serif;
+    font-size: 25px;
+    font-weight: 600;
+}
+.place h5 > span {
+    color: #F00;
+}
+.time-container .btn {
+padding: 15px 30px;
+justify-content: center;
+margin: 10px 200px 100px ;
+border-radius: 8px;
+color: #fff;
+background: #F00;
+border: none;
+
+}
+/* discount offer */
