--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,12 @@ body {
     font-size: 20px;
 }
 
+.text-title3 {
+    font-family: 'Inter', sans-serif;
+    font-size: 24px;
+    font-weight: 500;
+}
+
 
 /* shared style end */
 
@@ -129,6 +135,7 @@ header {
 }
 
 .party-colum>.btn {
+    font-family: 'Inter', sans-serif;
     background-color: transparent;
     color: #fff;
     text-align: center;
@@ -166,6 +173,7 @@ header {
 }
 
 .time-container .btn {
+    font-family: 'Inter', sans-serif;
     padding: 15px 30px;
     justify-content: center;
     margin: 10px 200px 100px;
@@ -173,6 +181,7 @@ header {
     color: #fff;
     background: #F00;
     border: none;
+    cursor: pointer;
 
 }
 
@@ -190,6 +199,9 @@ header {
     font-size: 24px;
     font-weight: 500;
 
+}
+.best-offer-colum > .best-offer-title {
+    font-size: 40px;
 }
 
 .best-offer-description {
@@ -318,23 +330,69 @@ header {
 }
 
 .input-btn {
-    
+    font-family: 'Inter', sans-serif;
+
 }
 
 .newsletter-container input[type="email"] {
     border-radius: 50px 0 0 50px;
     background: #FFF;
-    padding: 15px 30px;
-    
-    
+    padding: 16px 32px;
+    border: none;
+
+
 }
+
 .newsletter-container .btn-email {
-    border-radius:0 50px 50px 0; 
+    border-radius: 0 50px 50px 0;
     color: #fff;
     background: #F00;
-    padding: 15px 30px;
+    padding: 16px 32px;
     margin-left: -5px;
+    font-weight: 700;
+    cursor: pointer;
+    border: none;
 }
 
 /* footer style */
 
+.contact-us-container {
+    background-color: #070211;
+    color: #fff;
+    padding: 100px 120px;
+    font-family: 'Inter', sans-serif;
+}
+.contact-us-container > hr {
+    border-color: #070211;
+}
+
+.contact-us-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px 0;
+}
+.contact-us-row2 {
+    padding-right: 70px;
+}
+
+
+.contact-us-row .contact-us-row1 {
+    max-width: 400px;
+}
+
+.contact-icon {
+    display: flex;
+    
+}
+.contact-icon img {
+    padding-right: 10px;
+}
+
+.contact-us-row3 {
+    margin: 30px 0;
+    text-align: center;
+}
+.contact-us-row3 img{
+    padding: 0 20px;
+}
